# seahorse

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
example/: Cargo.toml
example/src/: main.rs
examples/: custom_help.rs  multiple_app.rs  multiple_flags.rs  nested_multiple_app.rs  single_app.rs  top_level_error_handling.rs
src/: action.rs  app.rs  args.rs  color.rs  command.rs  context.rs  error.rs  flag.rs  help.rs  lib.rs  utils.rs
src/app/: app.rs  mod.rs  single_app.rs
