[package]
name = "seahorse"
version = "1.1.2"
authors = ["ksk001100 <hm.pudding0715@gmail.com>"]
edition = "2018"
keywords = [
	"argument",
	"cli",
	"arg",
	"parser",
	"parse"
]
categories = ["command-line-interface"]
repository = "https://github.com/ksk001100/seahorse"
readme = "README.md"
license-file = "LICENSE"
documentation = "https://docs.rs/seahorse/"
description = "A minimal CLI framework written in Rust"

[dependencies]
